# RAG

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  MIXCORE-CMS-OVERVIEW.md  Makefile  README.md  check_models.py  demo.tsx  docker-compose.prod.yml  docker-compose.yml  download_models.py  download_remaining_models.py  download_single_model.py  pyproject.toml  requirements.txt  run.py  run_algorithm_demo.py  run_chunking_comparison.py  run_simple.py  vector-db-presentation.html
.github/workflows/: ci.yml  deploy.yml
agents/: __init__.py  orchestrator.py
data/: __init__.py
data/sample_documents/: __init__.py  embeddings_explained.txt  getting_started.md  rag_systems_guide.md
docker/: Dockerfile  Dockerfile.dev
mcp_server/: __init__.py  config.json  server.py
models/: __init__.py  embeddings.py
models/configs/: bge_m3.yaml  e5_base.yaml  minilm.yaml  nomic_v2.yaml
pipeline/: __init__.py  config.yaml  improved_chunking.py  main_pipeline.py  stages.py
scripts/: health_check.py  seed_data.py
security/: prompt_shield.py
src/rag/: __init__.py
src/rag/agents/: __init__.py  base.py  orchestrator.py
src/rag/api/: app.py  dependencies.py
src/rag/api/middleware/: auth.py  rate_limit.py
src/rag/api/routes/: documents.py  health.py  metrics.py  search.py
src/rag/core/: __init__.py  config.py  exceptions.py  logging.py  telemetry.py
src/rag/domain/: __init__.py  chunks.py  documents.py  search.py
src/rag/evaluation/: __init__.py  metrics.py  pipeline.py
src/rag/infrastructure/: __init__.py
src/rag/infrastructure/cache/: __init__.py  redis.py
src/rag/infrastructure/embeddings/: __init__.py  base.py  sentence_transformer.py
src/rag/infrastructure/vector_store/: __init__.py  base.py  qdrant.py
src/rag/mcp/: __init__.py  server.py
src/rag/pipeline/: __init__.py  chunking.py  embedding.py  ingestion.py  retrieval.py
src/rag/security/: __init__.py  auth.py  prompt_injection.py  rbac.py
visualizer/: __init__.py  app.py  chunking_comparison.py  simple_app.py
visualizer/components/: __init__.py  data_preview.py  index_gap_analyzer.py  pipeline_flow.py  stage_monitor.py  vectordb_inspector.py
