[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo-rag-sys-mcp"
version = "0.1.0"
description = "Visual RAG System with MCP and A2A - Open Source Demo"
authors = [{name = "Demo Author", email = "demo@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "streamlit>=1.39.0",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.3.0",
    "torch>=2.0.0",
    "transformers>=4.45.0",
    "pandas>=2.2.0",
    "numpy>=1.24.0",
    "plotly>=5.24.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "python-multipart>=0.0.9",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "typer>=0.12.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.7.0",
    "pre-commit>=3.8.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
]

mcp = [
    "mcp>=0.2.0",
]

agents = [
    # A2A protocol support will be added when available
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
]

[project.scripts]
demo-rag = "run:main"

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "agents", "models", "data", "mcp_server", "visualizer"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"