[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-platform"
version = "1.0.0"
description = "Production-grade Retrieval-Augmented Generation platform with MCP and multi-agent support"
authors = [{name = "nguyentuansi", email = "singuyen.it@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
]

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "httpx>=0.28.0",

    # Config & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Vector store
    "qdrant-client>=1.12.0",

    # Embeddings
    "sentence-transformers>=3.3.0",
    "torch>=2.0.0",
    "transformers>=4.45.0",
    "numpy>=1.24.0",

    # Cache
    "redis[hiredis]>=5.0.0",

    # Document parsing
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",

    # Search
    "rank-bm25>=0.2.2",

    # Logging & observability
    "structlog>=24.4.0",
    "prometheus-client>=0.20.0",

    # Data
    "pandas>=2.2.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",

    # CLI & display
    "rich>=13.9.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "pre-commit>=3.8.0",
    "bandit>=1.8.0",
    "safety>=3.2.0",
    "watchfiles>=0.24.0",
]

mcp = [
    "mcp>=1.0.0",
]

observability = [
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
]

[project.scripts]
rag-api = "src.rag.api.app:app"
rag-mcp = "src.rag.mcp.server:main"
rag-seed = "scripts.seed_data:seed"

[tool.hatch.build.targets.wheel]
packages = ["src/rag", "pipeline", "agents", "models", "data", "mcp_server", "visualizer"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "ANN001", "ANN002"]
ignore = ["ANN001", "ANN002", "E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/rag"]
omit = ["*/test*", "*/__pycache__/*"]
